[tool.poetry]
name = "detectron2"
version = "0.6"
description = "Detectron2 is FAIR's next-generation platform for object detection and segmentation."
authors = ["FAIR"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.7"
termcolor = "^1.1"
Pillow = "^7.1"
yacs = "^0.1.8"
tabulate = "^0.8.7"
cloudpickle = "^1.6.0"
fvcore = "^0.1.5.post20211023"
iopath = "^0.1.9"
matplotlib = "^3.5.0"
tensorboard = "^2.7.0"
future = "^0.18.2"
pydot = "^1.4.1"
Shapely = "^1.8.0"
torch = "^1.10.0"
panopticapi = { git = "https://github.com/cocodataset/panopticapi.git", rev = "7bb4655548f98f3fedc07bf37e9040a992b054b0" }
tqdm = "^4.62.3"
pycocotools = "^2.0.2"
omegaconf = "^2.1.1"
hydra-core = "^1.1.1"
black = "21.4b2"

[tool.poetry.dev-dependencies]
flake8 = "3.8.1"
isort = "4.3.21"
flake8-bugbear = "*"
flake8-comprehensions = "*"

[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta:__legacy__"
